Fixed bug: Profile page content going off screen

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,13 @@
 .App {
   text-align: center;
   display: flex;
+  height: 100%;
+  width: 100%;
 }
 
 html, body, #root {
   height: 100%;
+  width: 100%;
   margin: 0; /* Removes any default margin */
 }
 
